--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Slab">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     <link rel="stylesheet" href="styles.css">
     <title>Nha Trang One</title>
 </head>
@@ -86,6 +87,30 @@
             </div>
             <button>EXPLORE THE MENU</button>
         </div>
+    </section>
+
+    <section class="Instagram">
+        <ul class="Instagram_Handle">
+            <div>
+                <img src="nhatrangImg/instagramIcon.png" alt="instagramIcon" >
+                <p>@NHATRANGNYC </p>
+            </div>
+            <li><h1>Instagram</h1></li>
+        </ul>
+
+        <div class="photos">
+            <div class="row">
+                <img src="nhatrangImg/ig1.png" alt="ig1">
+                <img src="nhatrangImg/ig2.png" alt="ig2">
+                <img src="nhatrangImg/ig3.png" alt="ig3">
+            </div>
+            <div class="row">
+                <img src="nhatrangImg/ig4.png" alt="ig4">
+                <img src="nhatrangImg/ig5.png" alt="ig5">
+                <img src="nhatrangImg/ig6.png" alt="ig6">
+            </div>
+        </div>
+        <h1>Follow Our Instagram!</h1>
     </section>
     
 </body>
