--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <img src="nhatrangImg/instagramIcon.png" alt="instagramIcon" >
                 <p>@NHATRANGNYC </p>
             </div>
-            <li><h1>Instagram</h1></li>
+            <li><h1 id="IGTextLink">Instagram</h1></li>
         </ul>
 
         <div class="photos">
