--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <ul class="Nav_Bar_Links">
-            <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 6.96px;">
+            <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 7px;">
                 <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
                 <h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1>
             </div>
@@ -24,7 +24,7 @@
             <li><a href="">Location</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">FAQ</a></li>
-            <li><a href=""><button class="Order_Button">ORDER NOW</button></a></li>
+            <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
     </nav>
 
@@ -141,6 +141,6 @@
               zoom: 18
             });
         </script>
-    </section>
+    </section> 
 </body>
 </html>
