--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <div class="Top_Row">
                     <div class="dish">
                         <div class="description">
-                            <h2>Mực Chiên Giòn</h2>
+                            <h2>Mực Chiên Dòn</h2>
                             <p>Crispy Squid (Calamari) with Garlic Sauce</p>
                         </div>
-                        <img src="nhatrangImg/muc-chien-gion.png" alt="muc-chien-gion">
+                        <img src="nhatrangImg/muc-chien-don.png" alt="muc-chien-don">
                     </div>
                     <div class="dish">
                         <div class="description">
