--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="dish">
                         <div class="description">
                             <h2>Chả Giò</h2>
-                            <p>Vietnamese Style deep fried spring roll</p>
+                            <p>Vietnamese Style Deep Fried Spring Roll</p>
                         </div>
                         <img src="nhatrangImg/cha-gio.png" alt="cha-gio">
                     </div>
