--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <ul class="Nav_Bar_Links">
             <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 7px;">
                 <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
-                <h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1>
+                <a href="index.html" style="text-decoration: none;"><h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1></a>
             </div>
             <li><a href="">About Us</a></li>
-            <li><a href="">Menu</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="">Location</a></li>
             <li><a href="">FAQ</a></li>
             <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
