--- a/menu.html
+++ b/menu.html
@@ -13,14 +13,21 @@
 </head>
 <body style="display: flex; flex-direction: column;">
     <nav>
-        <ul class="Nav_Bar_Links">
+        <div>
             <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 7px;">
                 <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
                 <a href="index.html" style="text-decoration: none;"><h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1></a>
             </div>
+            <a id = "toggle">
+                <span class = "bar"></span>
+                <span class = "bar"></span>
+                <span class = "bar"></span>
+            </a>
+        </div>
+        <ul class="Nav_Bar_Links">
             <li><a href="">About Us</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="index.html#Location">Location</a></li>
+            <li><a href="#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
             <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
