--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
         <ul class="Nav_Bar_Links">
             <li><a href="">About Us</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="#Location">Location</a></li>
+            <li><a href="index.html#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
             <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
         </ul>
