--- a/index.html
+++ b/index.html
@@ -160,10 +160,7 @@
     </section>
     <footer>
         <div>
-            <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 7px;">
-                <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
-                <a href="index.html" style="text-decoration: none;"><h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1></a>
-            </div>
+            footer goes here
         </div>
             <ul>
                 <li><a href="" id="order"><button class="Order_Button">ORDER NOW</button></a></li>
