--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         //toggle button the dropdown menu
         const toggle = document.getElementById("toggle");
         const navLinks = document.querySelector(".Nav_Bar_Links");
-        const locationNavLink = document.getElementById("location")
+        const locationNavLink = document.querySelector("#location")
         const bars = document.querySelectorAll(".bar")
         const toggleDropDown =  () => {
             navLinks.classList.toggle("active")
@@ -60,7 +60,8 @@
             toggleDropDown()
         })
         locationNavLink.addEventListener("click", () => {
-            toggleDropDown()
+            navLinks.classList.remove("active")
+            // document.body.style.overflow = 'auto';
         })
         
     </script>
@@ -156,7 +157,7 @@
             <p>New York, NY 10013</p>
             <p>(212)-233-5948</p>
             <br/>
-            <h2>OPEN EVERDAY EXCEPT MONDAY</h2>
+            <h2>OPEN EVERYDAY EXCEPT MONDAY</h2>
             <p>11:00 AM - 8:30 PM</p>
         </div>
         <div id="map"></div>
