FIXED DISCORD COMMENTS 4/19 1:26pm

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         })
         locationNavLink.addEventListener("click", () => {
             navLinks.classList.remove("active")
-            // document.body.style.overflow = 'auto';
         })
         
     </script>
@@ -69,7 +68,7 @@
     <section class="Landing_Page">
         <div class="Landing_Page_Content">
             <img class="main_logo" src="nhatrangImg/NhaTrangOneLogo.svg" alt="NhaTrangOneLogo">
-            <h1>Vietnamese Food From Our Family To Yours</h1>
+            <h1>Vietnamese Food From <br>Our Family To Yours</h1>
             <button>Order Now</button>
         </div>
     </section>
@@ -116,7 +115,7 @@
                 <div class="dish">
                     <div class="description">
                         <h2>Cà Phê Sữa Đá</h2>
-                        <p>Vietnamese Style Iced Coffee with Condensed Milk</p>
+                        <p>Vietnamese Iced Coffee with Condensed Milk</p>
                     </div>
                     <img src="nhatrangImg/ca-phe-sua-da.png" alt="ca-phe-sua-da">
                 </div>
@@ -152,12 +151,12 @@
     <section class="Location" id = "Location"> 
         <div class="description">
             <h1>HOURS & LOCATION</h1>
-            <!-- add diamonds -->
+            <br>hello</br>
             <p>87 Baxter Street</p>
             <p>New York, NY 10013</p>
             <p>(212)-233-5948</p>
-            <br/>
-            <h2>OPEN EVERYDAY EXCEPT MONDAY</h2>
+            
+            <h2 style="margin-top:50px">OPEN EVERYDAY EXCEPT MONDAY</h2>
             <p>11:00 AM - 8:30 PM</p>
         </div>
         <div id="map"></div>
