animations, template new pages
added the X bar animation, added height animation, started on the about and menu pages (mobile first) and yea...

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     <link rel="stylesheet" href="styles.css">
-    <title>Menu</title>
+    <title>About Us</title>
 </head>
 <body>
     <nav>
@@ -36,21 +36,10 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    
-    <!-- <img src="nhatrangImg/nhatrangoneMenupt1.png" alt="nhatrangoneMenupt1">
-    <img src="nhatrangImg/nhatrangoneMenupt2.png" alt="nhatrangoneMenupt2"> -->
-    <div class = "dropdown" style="margin-top: 100px;">
-        <div class = "select">
-            <span class = "selected">Pho</span>
-            <div class = "carrot"></div>
+    <section class="Landing_Page">
+        <div class="Landing_Page_Content">
+            <h1>About Us</h1>
         </div>
-    </div>
-    <ul class = "menu">
-        <li class="menu-active">Pho</li>
-        <li>Com</li>
-        <li>Mi</li>
-        <li>Bun</li>
-    </ul>
-    <script src="/js/menu.js"></script>
-</body>
-</html>
+    </section>
+    <p>hello</p>
+</body> 
