added template for about and menu pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </a>
         </div>
         <ul class="Nav_Bar_Links">
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a id = 'location' href="#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
