--- a/menu.html
+++ b/menu.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="styles.css">
     <title>Menu</title>
 </head>
-<body>
+<body style="background-color: #1B1F2F;">
     <nav>
-        <div>
-            <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 7px;">
+        <div class = 'drop'>
+            <div class="logo">
                 <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
                 <a href="index.html" style="text-decoration: none;"><h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1></a>
             </div>
@@ -28,7 +28,7 @@
             </a>
         </div>
         <ul class="Nav_Bar_Links">
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
@@ -39,7 +39,7 @@
     
     <!-- <img src="nhatrangImg/nhatrangoneMenupt1.png" alt="nhatrangoneMenupt1">
     <img src="nhatrangImg/nhatrangoneMenupt2.png" alt="nhatrangoneMenupt2"> -->
-    <div class = "dropdown" style="margin-top: 100px;">
+    <div class = "dropdown">
         <div class = "select">
             <span class = "selected">Pho</span>
             <div class = "carrot"></div>
@@ -52,5 +52,29 @@
         <li>Bun</li>
     </ul>
     <script src="/js/menu.js"></script>
+
+    <section class = "food-section">
+        <h2>Seafood | Do Bien</h2>
+        <div class = "food-item alt">
+            <h3>D18. Tom Rang Moi</h3>
+            <p>jumbo shrimp in salt and pepper sauce</p>
+            <h2>13.25</h2>
+        </div>
+        <div class = "food-item">
+            <h3>D29. Muc Xao Sa Ot</h3>
+            <p>squid with lemongrass chili sauce</p>
+            <h2>13.25</h2>
+        </div>
+        <div class = "food-item alt">
+            <h3>D32. Tom Xao Bong Cai</h3>
+            <p>jumbo shrimp and broccoli </p>
+            <h2>13.25</h2>
+        </div>
+        <div class = "food-item">
+            <h3>D20. Tom Goi Dudu</h3>
+            <p>shrimp with cold papaya salad</p>
+            <h2>13.25</h2>
+        </div>
+    </section>
 </body>
 </html>
