--- a/ourstory.html
+++ b/ourstory.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <nav>
-        <div>
-            <div class="Logo" style="float:left; display: flex; justify-content: center; align-items: center; padding: 0px 10px ; gap: 7px;">
+        <div class = 'drop'>
+            <div class="logo">
                 <img class="Layer_3" src="nhatrangimg/nha-trang-one-logo.svg" alt="nha-trang-one-logo">
                 <a href="index.html" style="text-decoration: none;"><h1 class="NHA_TRANG_ONE">NHA TRANG ONE</h1></a>
             </div>
@@ -28,7 +28,7 @@
             </a>
         </div>
         <ul class="Nav_Bar_Links">
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
@@ -37,9 +37,11 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Landing_Page">
-        <div class="Landing_Page_Content">
-            <h1>About Us</h1>
+        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat;">
+            <h1>Our Story</h1>
         </div>
     </section>
-    <p>hello</p>
+    <div>
+        <p></p>
+    </div>
 </body> 
