--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <ul class="Nav_Bar_Links">
-            <li><a href="about.html">Our Story</a></li>
+            <li><a href="ourstory.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
