--- a/ourstory.html
+++ b/ourstory.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>About Us</title>
 </head>
-<body>
+<body style="background-color: #1B1F2F;">
     <nav>
         <div class = 'drop'>
             <div class="logo">
@@ -28,7 +28,7 @@
             </a>
         </div>
         <ul class="Nav_Bar_Links">
-            <li><a href="about.html">Our Story</a></li>
+            <li><a href="ourstory.html">Our Story</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html#Location">Location</a></li>
             <li><a href="">FAQ</a></li>
@@ -41,7 +41,13 @@
             <h1>Our Story</h1>
         </div>
     </section>
-    <div>
-        <p></p>
+    <div class = "about">
+        <p>Welcome to Nha Trang One! I'm Andy Ha, proud to carry on my parents' legacy. Since 1992, our family has poured our hearts into creating an inviting space where you can experience the warmth of a home-cooked meal.
+            Over the years, we've faced challenges head-on, preserving the essence of our authentic Vietnamese cuisine. Our commitment to honoring our family traditions and providing affordable, flavorful dishes has never wavered.
+            At Nha Trang One, we believe that good food has the power to bring people together. We strive to offer a taste of Vietnam that won't break the bank, creating an inclusive dining experience for all to enjoy.
+            Join our extended family and savor the culinary delights we've crafted with love and passion. Feel the sense of comfort that comes from being part of our welcoming community. As we adapt to better serve you, we remain dedicated to upholding our founding principles.
+            Thank you for being part of our journey. We look forward to sharing the delicious tastes and warm hospitality of Nha Trang One with you.
+        </p>
+        <img src = "nhatrangImg/coldandypicture.png" alt = "Owner: Andy Ha">
     </div>
 </body> 
